[project]
name = "linkhub-backend"
version = "0.1.0"
description = "App for linkhub"
authors = [
    {name = "Hernan Provoste",email = "hernanprovostev@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "unicorn[standar] (>=2.1.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
